--- a/Garage-Mock/Prototyp1/css/app.css
+++ b/Garage-Mock/Prototyp1/css/app.css
@@ -7,19 +7,19 @@ body
 {
     background: #f9f9f9;
     color: #141823;
-    margin: 0;
-    padding: 0;
-    line-height: 1.25;
     display: flex;
     flex-direction: column;
     font-family: 'Source Sans Pro', sans-serif;
+    line-height: 1.25;
+    margin: 0;
+    padding: 0;
 }
 
 h2
 {
-    margin: 1.75rem 0 0.25rem 0;
     font-size: 1.8rem;
     font-weight: 400;
+    margin: 1.75rem 0 0.25rem 0;
 }
 
 a:link, a:active, a:visited
@@ -40,6 +40,7 @@ a:hover
 
 /* HEADER
 */
+
 .app-header
 {
     background-color: #141823;
@@ -49,17 +50,17 @@ a:hover
 
 .app-header nav
 {
-    width: 80%;
     margin: 0 auto;
+    width: 80%;
 }
 
 .app-header nav ul
 {
-    list-style: none;
+    align-items: stretch;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
-    align-items: stretch;
+    list-style: none;
     margin: 0;
     padding: 0;
 }
@@ -78,18 +79,18 @@ a:hover
 .app-header .logo > h1
 {
     font-family: 'Oleo Script', cursive;
-    line-height: 1.25;
-    font-weight: 400;
     font-size: 2rem;
+    font-weight: 400;
+    line-height: 1.25;
     margin: 0;
 }
 
 .app-header nav ul li a
 {
-    padding: 0 1rem;
     display: block;
-    text-decoration: none;
     line-height: 2.5;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
     transition: all 0.8s;
 }
 
@@ -100,8 +101,8 @@ a:hover
 
 .app-header .logo:hover
 {
-    color: #2dafff;
     background-color: #141823;
+    color: #2dafff;
 }
 
 /* BODY
@@ -109,16 +110,16 @@ a:hover
 
 .app-body
 {
+    margin: 1rem auto 0 auto;
     /*background-color: #b71c34;*/
     width: 80%;
-    margin: 1rem auto 0 auto;
 }
 
 .hero
 {
-    padding: 3rem;
-    margin-bottom: 2rem;
     background-color: #dddddd;
+    margin-bottom: 2rem;
+    padding: 3rem;
 }
 
 .hero h2
@@ -133,51 +134,55 @@ a:hover
 
 .app-body-gallery
 {
+    align-items: center;
     display: flex;
     flex-flow: row wrap;
-    align-items: center;
 }
 
 .app-body-gallery .app-body-gallery-item
 {
-    width: 33.3%;
+    background-position: center center;
+    background-size: cover;
     height: 125px;
     height: 25vh;
     overflow: hidden;
-    background-size: cover;
-    background-position: center center;
     transition: 0.8s opacity;
+    width: 33.3%;
 }
 
 .app-body-gallery .app-body-gallery-item
-{ opacity: 0.3 }
+{
+    opacity: 0.3
+}
 
 .app-body-gallery .app-body-gallery-item:hover
-{ opacity: 1 }
+{
+    opacity: 1
+}
 
 .app-body-news
 {
-    margin-bottom: 1rem;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    margin-bottom: 1rem;
 }
 
 .app-body-news-item
 {
-    width: 49%;
     background-color: #f1f1f1;
-    padding: 0.5rem;
+    border-bottom: 2px #2dafff solid;
     box-sizing: border-box;
     margin-bottom: 1rem;
-    border-bottom: 2px #2dafff solid;
+    padding: 0.5rem;
+    width: 49%;
 }
 
 .app-body-news-item h3
 {
-    margin: 0;
     font-size: 1.3rem;
     font-weight: 400;
+    margin: 0;
 }
 
 .app-body-news-item p:first-of-type
@@ -187,19 +192,20 @@ a:hover
 
 /* FOOTER
  */
+
 .app-footer
 {
     background-color: #2dafff;
-    color: #f9f9f9;
     box-sizing: border-box;
-    width: 80%;
+    color: #f9f9f9;
     margin: auto auto 0 auto;
+    width: 80%;
 }
 
 .app-footer p
 {
-    padding: 0.5rem 2rem;
     font-size: 0.8rem;
+    padding: 0.5rem 2rem;
 }
 
 .app-footer a:link, .app-footer a:active, .app-footer a:visited
@@ -213,20 +219,90 @@ a:hover
     color: #fff;
 }
 
+
+.app-body-full-width
+{
+    width: 100%;
+}
+
+.app-body table
+{
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.app-body table thead
+{
+    text-align: left;
+}
+
+.app-body table tr td, .app-body table tr th
+{
+    padding: 0.5rem 0.25rem;
+}
+
+.app-body table tr:nth-child(odd) td
+{
+    background-color: #eeeeee;
+}
+
+.app-body-vehicles
+{
+    align-items: flex-start;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.app-body-vehicles-item
+{
+    box-sizing: border-box;
+    width: 24.7%;
+    margin-bottom: 1rem;
+    background-color: #eeeeee;
+}
+
+.app-body-vehicles-item dt
+{
+    font-weight: bold;
+    overflow-wrap: break-word;
+}
+
+.app-body-vehicles-item dd
+{
+    margin: 0;
+    padding: 0 0 0.5rem 0;
+    word-break: break-all;
+}
+
+.app-body-vehicles-item-image
+{
+    
+    background-position: center center;
+    background-size: cover;
+    /*
+    height: 125px;
+*/
+    height: 20vh;
+    overflow: hidden;
+    transition: 0.8s opacity;
+}
+
 .clearfix:after
 {
-    visibility: hidden;
+    clear: both;
+    content: " ";
     display: block;
     font-size: 0;
-    content: " ";
-    clear: both;
     height: 0;
+    visibility: hidden;
 }
 
 /* UTILS
 */
 
 /* close commented backslash hack */
+
 .bold
 {
     font-weight: bold;
@@ -256,10 +332,19 @@ a:hover
     {
         justify-content: flex-start;
     }
+
+    .app-body-vehicles-item
+    {
+        width: 49.7%;
+    }
 }
 
 @media all and (max-width: 37.5rem)
 {
+    .app-body-full-width p
+    {
+        padding: 0 0.5rem;
+    }
     .app-body-gallery .app-body-gallery-item
     {
         width: 100%;
@@ -267,8 +352,8 @@ a:hover
 
     .app-body-news-item
     {
-        width: 100%;
         padding: 0.5rem 1rem;
+        width: 100%;
     }
 
     .app-header nav, .app-body, .app-footer
@@ -284,72 +369,90 @@ a:hover
 
     .app-header nav ul li a
     {
-        text-align: center;
-        padding: 10px;
-        border-top: 1px solid rgba(255, 255, 255, 0.3);
+        border-bottom: 1px solid #000000;
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        border-top: 1px solid #ffffff;
+        border-top: 1px solid rgba(255, 255, 255, 0.3);
+        padding: 10px;
+        text-align: center;
     }
 
     .app-header nav ul li:last-of-type a
     {
         border-bottom: none;
     }
+
     /* Force table to not be like tables anymore */
-    table, thead, tbody, th, td, tr {
+    table, thead, tbody, th, td, tr
+    {
         display: block;
     }
 
     /* Hide table headers (but not display: none;, for accessibility) */
-    thead tr {
+    thead tr
+    {
+        left: -9999px;
         position: absolute;
         top: -9999px;
-        left: -9999px;
     }
 
-    tr { border: 1px solid #ccc; }
+    tr
+    {
+        border: 1px solid #ccc;
+    }
 
-    td {
+    td
+    {
         /* Behave  like a "row" */
         border: none;
         border-bottom: 1px solid #eee;
+        padding-left: 50% !important;
         position: relative;
-        padding-left: 50%;
     }
 
-    td:before {
+    td:before
+    {
+        left: 6px;
+        padding-right: 10px;
         /* Now like a table header */
         position: absolute;
         /* Top/left values mimic padding */
         top: 6px;
-        left: 6px;
-        width: 45%;
-        padding-right: 10px;
         white-space: nowrap;
+        width: 45%;
+        font-weight: bold;
     }
-}
 
-.app-body-full-width
-{
-    width: 100%;
-}
+    td:nth-of-type(1):before
+    {
+        content: "Namn";
+    }
 
-.app-body table
-{
-    border-collapse: collapse;
-    width: 100%;
-}
+    td:nth-of-type(2):before
+    {
+        content: "Befattning";
+    }
 
-.app-body table thead
-{
-    text-align: left;
-}
+    td:nth-of-type(3):before
+    {
+        content: "Telefonnummer";
+    }
 
-.app-body table tr td, .app-body table tr th
-{
-    padding: 0.5rem 0.25rem;
-}
+    td:nth-of-type(4):before
+    {
+        content: "Epost";
+    }
 
-.app-body table tr:nth-child(odd) td
-{
-    background-color: #eeeeee;
+    .app-body-vehicles-item
+    {
+        width: 100%;
+    }
+    .app-body-vehicles-item dl
+    {
+        padding: 0 0.5rem;
+        display: flex;
+        flex: row wrap;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
 }
